# git-manager

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  git.rs  github.rs  lib.rs  watcher.rs
src/components/local/: AiSettings.tsx  BranchGraph.tsx  FileStatusView.tsx  FolderBrowser.tsx  GitActionHelp.tsx  GitHubReposView.tsx  GitHubSidebar.tsx  InlineCommit.tsx  PublishToGitHub.tsx  QuickStatus.tsx  RemoteManager.tsx  RemoteSidebar.tsx  StashList.tsx  index.ts
src/components/ui/: sonner.tsx
src/hooks/: useGitHub.ts  useTauriGit.ts  useTheme.ts
src/stores/: useLocalReposStore.ts
